--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		
+		 <!-- Connection CSS file -->
+		<link href="css/style.css" rel="stylesheet" type="text/css"/>
 		<title>My first site</title>
 	</head>
 	<body>
