Commit file index tahirot darocarda shud
dar index bloki footer sohta shud

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 				<input type="submit" value="sabt"/>
 			</form>
 		</div>
+		<!-- blogi footer sohta shu -->
+		<div class="Blokc-footer">
+		<p>test block footer</p>
+		</div>
 	</body>
 </html>
