Commit for content
Was added block-content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>My first site</title>
 	</head>
 	<body>
-		<div>
+		<div class="block-banner">
 			<form>
 				Full name: <input type="text" placeholder="Full Name"/>
 				Email: <input type="text" placeholder="Full Name"/>
@@ -16,6 +16,13 @@
 				<input type="submit" value="sabt"/>
 			</form>
 		</div>
+		
+		<!-- Create block content -->
+		<div class="block-content">
+			<p>
+			 Дар ин чо барои контент 
+			</p>
+		</div>	
 		<!-- blogi footer sohta shu -->
 		<div class="Blokc-footer">
 		<p>test block footer</p>
